--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~7.2.0",
     "@swimlane/ngx-charts": "^20.5.0",
     "alasql": "^4.2.2",
+    "angular2-text-mask": "^9.0.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
