--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "angular2-text-mask": "^9.0.0",
     "core-js": "^2.5.4",
     "dom-autoscroller": "^2.3.4",
+    "file-saver": "^2.0.5",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
