--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dom-autoscroller": "^2.3.4",
     "file-saver": "^2.0.5",
     "hammerjs": "^2.0.8",
+    "jszip": "^3.10.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
